[tool.poetry]
name = "pgadb"
version = "0.1.0"
description = ""
authors = ["Jason Damiani <me@jasondamiani.com>"]

[tool.poetry.scripts]
pgadb = "pgadb.main:app"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.5"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
requests = "^2.27.1"
openpyxl = "^3.0.9"
typer = {extras = ["all"], version = "^0.4.0"}
pypgatour = {path = "../pypgatour"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
